partial_eq_dyn_derive/tests/ui/compile_errors/item-is-union.rs
use partial_eq_dyn_derive::PartialEqDyn;

#[derive(PartialEqDyn)]
union SomeUnion {
    first: i32,
    second: i8,
}

fn main() {}
